--- a/docs/assets/css/ccc.css
+++ b/docs/assets/css/ccc.css
@@ -3352,6 +3352,8 @@ section.container.bciBannerImage.bciHandImage { padding-top: 0; }
 
 /* Mobile */
 @media screen and (max-width: 600px) { .nav-link.donateNow { margin-right: 0.5em; }
+  .leftWhite ul { width: calc(100% - 1em); max-width: unset; }
+  h1 { margin-left: 0.25em; }
   header.jumbotron.text-left.tileHeader { background: url(/assets/img/ccc_mobile_banner.png); background-size: cover; background-position: 50% 50%; position: relative; }
   .curatedMap { display: none; }
   button.learnMoreButton { margin: 0; left: 0; display: inline-block; font-size: 2.5em; width: 50%; }
@@ -3367,7 +3369,7 @@ section.container.bciBannerImage.bciHandImage { padding-top: 0; }
   .inPerson p { padding-right: 1em; }
   #events { order: 2; } }
 
-@media screen and (max-width: 600px) { button.learnMoreButton { font-size: 1.75em !important; }
+@media screen and (max-width: 330px) { button.learnMoreButton { font-size: 1.75em !important; }
   .col-sm-6 h1 { font-size: 1.95em !important; margin-left: 0.3em !important; } }
 
 /*# sourceMappingURL=ccc.css.map */
